--- a/infra/db-deployment.yaml
+++ b/infra/db-deployment.yaml
@@ -21,6 +21,8 @@ spec:
       containers:
       - name: postgres
         image: postgres
+        ports:
+        - containerPort: 5432
         env:
         - name: POSTGRES_PASSWORD
           value: mysecretpassword
